@@ -1,0 +1,7 @@
+package TestCase::CompileError::PackageVar::Private {
+  use TestCase::Simple;
+  
+  sub main : int () {
+    $TestCase::Simple::VAR_PRIVATE;
+  }
+}
