@@ -1,5 +1,7 @@
 0.0390 2018-11-14
   - package variable must start upper case or contain ::
+  - add SPVM::List module
+  - add private private package variable
 0.0389 2018-11-13
   - fix nested loop last bugs
   - fix nested loop next bugs
